# shunt

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  release.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: __init__.py
benchmarks/terminal_bench/: __init__.py  shunt_agent.py
crates/shunt-bench/: Cargo.toml  gemma4-8080.toml  models.toml  pure-models.toml  qwen27b-8080.toml
crates/shunt-bench/src/: edit_strategies.rs  eval.rs  fixtures.rs  harness.rs  lib.rs  live.rs  main.rs  mock.rs
crates/shunt-bench/src/capability/: mod.rs  model.rs  score.rs  task.rs
crates/shunt-bench/src/pure/: agent_loop.rs  client.rs  metrics.rs  mod.rs  report.rs  tools.rs
crates/shunt-cli/: Cargo.toml
crates/shunt-cli/src/: main.rs
crates/shunt-core/: Cargo.toml
crates/shunt-core/src/: ledger.rs  lib.rs  machine.rs  safety.rs
crates/shunt-edit/: Cargo.toml
crates/shunt-edit/src/: apply.rs  lib.rs  view.rs
crates/shunt-edit/tests/: roundtrip.rs
crates/shunt-infer/: Cargo.toml
crates/shunt-infer/src/: agent.rs  engine.rs  lib.rs  registry.rs
crates/shunt-infer/tests/: harness.rs  integration.rs
crates/shunt-knowledge/: Cargo.toml
crates/shunt-knowledge/src/: config.rs  context.rs  inventory.rs  lib.rs  lookup.rs  manuals.rs  types.rs
crates/shunt-localize/: Cargo.toml  README.md
crates/shunt-localize/src/: lib.rs  workspace_search.rs
crates/shunt-localize/src/search/: chunk.rs  context.rs  crawler.rs  engine.rs  error.rs  graph.rs  ingest.rs  lexical.rs  lifecycle.rs  mod.rs  parser.rs  symbol.rs  tokenize.rs  types.rs
crates/shunt-runtime/: Cargo.toml
crates/shunt-runtime/src/: driver.rs  executor.rs  lib.rs  machine.rs  probes.rs  runner.rs  session.rs
crates/shunt-store/: Cargo.toml
crates/shunt-store/src/: lib.rs
docs/: Gemfile  _config.yml  architecture.md  benchmarks.md  domain-model.md  index.md  iterations.md  localization-architecture.md  localization.md  models.md
presets/: gemma-4-12b.sh  qwen3-6-27b.sh
prompts/: agent.system.txt  clarify.system.txt  clarify.user.txt  knowledge-plan.system.txt  knowledge-plan.user.txt  scope_new_file.system.txt  scope_new_file.user.txt  understand.system.txt  understand.user.txt  verifier.system.txt
scripts/: install-git-hooks.sh  install.sh  pre-commit.sh  release-check.sh
