[workspace]
members = [
    "crates/shunt-cli",
    "crates/shunt-core",
    "crates/shunt-edit",
    "crates/shunt-infer",
    "crates/shunt-knowledge",
    "crates/shunt-localize",
    "crates/shunt-runtime",
    "crates/shunt-store",
    "crates/shunt-bench",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.2"
repository = "https://github.com/osmanorhan/shunt"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level   = 3
lto         = "thin"
strip       = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
