[package]
name = "shunt-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "shunt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
shunt-core = { path = "../shunt-core" }
shunt-infer = { path = "../shunt-infer" }
shunt-runtime = { path = "../shunt-runtime" }
shunt-store = { path = "../shunt-store" }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing.workspace = true
tracing-subscriber.workspace = true
time = { version = "0.3", features = ["serde", "std"] }
tokio.workspace = true
toml = "0.8"
