[package]
name = "shunt-edit"
version.workspace = true
edition.workspace = true
license.workspace = true

# Intentionally dependency-light and self-contained: a reusable, position-addressed
# editing engine + a playground for editing strategies to benchmark for local
# models. No shunt-* deps, no IO — keep the surface clean and the package portable.
[dependencies]
