[package]
name = "shunt-infer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
shunt-core = { path = "../shunt-core" }
shunt-edit = { path = "../shunt-edit" }
shunt-localize = { path = "../shunt-localize" }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
time = { version = "0.3", features = ["macros"] }

