[package]
name = "shunt-knowledge"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
shunt-core = { path = "../shunt-core" }
shunt-localize = { path = "../shunt-localize" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.20"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = "0.3"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
