[package]
name = "shunt-localize"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aho-corasick = "1.1"
blake3 = "1"
shunt-core = { path = "../shunt-core" }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3"
time = { version = "0.3", features = ["macros"] }
