[package]
name = "shunt-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
shunt-core = { path = "../shunt-core" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
